tests/sksl/errors/InvalidMeshVertexMainParameters.stage
### Compilation failed:

error: 9: 'main' parameter must be 'const Attributes'.
Varyings main(const NotAttributes attr) {
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: 10: unknown identifier 'attr'
    return Varyings(attr.position);
                    ^^^^
2 errors
